# openresty-starter

./: .dockerignore  .gitignore  .projectile  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.org  build_openresty.sh  install.cmake  install_code.cmake  install_openresty.cmake  introduction.md  mock.sh  tech.org  usage.org
conf/: project.cron  project.nginx.conf
doc/: README.org
doc/1_overview/: overview.md  overview.org
doc/2_protocol/: protocol.md  protocol.org  protocol_1.org
doc/3_dependency/: dependency.org
doc/3_environment/: develop.md  develop.org  pre-release.md  pre-release.org  release.md  release.org
doc/4_configure/: config.org
doc/4_storage/: mysql.md  mysql.org  redis.md  redis.org
doc/5_environment/: online_env.org  test_env.org
doc/6_database/: db.org  table.org
lib/: luarocks.sh  requirements.txt
nginx/: .luacov  config.ld
nginx/conf/: logrotate.conf  nginx.conf  project.cron  project.proxy.nginx.conf
nginx/conf/vhosts/: inner.project.nginx.conf  mock.nginx.conf  project.nginx.conf
nginx/lib/: luarocks.sh
nginx/lua/: init.lua  init_worker.lua  static.lua
nginx/lua/cache/: cache.lua  example.lua  redis_helper.lua
nginx/lua/conf/: common.lua  config.lua  err_def.lua  err_msg.lua  upstream.lua  white_list.lua
nginx/lua/database/: database.lua  example.lua  mysql_helper.lua
nginx/lua/falcon/: falcon.lua  metrics.lua
nginx/lua/interface/: access.lua  example.lua
nginx/lua/misc/: area  city  country  geo.lua  ip_str.lua  ipdb.lua  ipdb.mmdb  isp  lang.lua  mmdb_helper.lua  ngx.lua  ngx_utils.lua  province  shm.lua  utils.lua
nginx/lua/mock/: falcon.lua
nginx/lua/monitor/: monitor.lua
nginx/lua/stat/: interface.lua  report.lua
nginx/lua/test/: .luacov  config.lua  geo.lua  ip_str.lua  lang.lua  mmdb_helper.lua  mock_falcon.lua  test.lua  test.nginx.conf  utils.lua
nginx/lua/upstream/: falcon.lua  http_helper.lua
nginx/lua/utils/: utils.lua
nginx/sbin/: log_split.sh  luarocks.sh  monitor.sh  project.cron  report_falcon.sh
sbin/: monitor.sh  restart.sh  start.sh  stop.sh
script/: Pipfile  config.py  example_db.py  falcon.py  load_data.py  log_cfg.py  main_db.py  mysql_master_slaves.py  requirements.txt  upstream_conf.py  xllog.py
src/conf/: domain.proxy.nginx.conf  nginx.conf  project.cron  project.proxy.nginx.conf
src/conf/vhosts/: domain.nginx.conf  project.nginx.conf
src/lua/: init.lua  init_worker.lua  interface.lua
src/lua/cache/: cache.lua  example_cache.lua  (+2 more)
src/lualib/: requirements.txt
src/sbin/: monitor.sh  ngx.sh  report_falcon.sh
test/: Pipfile  config.py  dev_env.py  example_db.py  example_server.py  log_cfg.py  online_env.py  pre_env.py  pre_release_env.py  release_env.py  server.py  test.py  test_example.py  upstream_conf.py  xllog.py
(+60 files in other folders)
