cmake_minimum_required(VERSION 3.0)
project(project-name VERSION 0.0.0.1) #应该修改此处的project-name和对应的版本号

install(DIRECTORY bin/ DESTINATION bin
  # 存放二进制可执行程序
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_WRITE WORLD_READ WORLD_EXECUTE
  )

install(DIRECTORY sbin/ DESTINATION sbin
  # 存放程序运行控制脚本，start,stop,resetart,monitor等
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_WRITE WORLD_READ WORLD_EXECUTE
  )

install(DIRECTORY script/ DESTINATION script
  # 存放一些常用的脚本
  FILES_MATCHING
  PATTERN "*.sh" PERMISSIONS OWNER_WRITE WORLD_READ WORLD_EXECUTE
  PATTERN "*.py" PERMISSIONS OWNER_WRITE WORLD_READ WORLD_EXECUTE
  )

install(DIRECTORY conf/ DESTINATION conf
  # 存放项目的nginx配置文件
  FILES_MATCHING
  PATTERN "*.conf" PERMISSIONS OWNER_WRITE WORLD_READ
  PATTERN "*.cron" PERMISSIONS OWNER_WRITE WORLD_READ
  )

install(DIRECTORY lualib/ DESTINATION lualib
  # 存放第三方依赖库
  FILES_MATCHING
  PATTERN "*.lua" PERMISSIONS WORLD_READ
  PATTERN "*.so" PERMISSIONS  WORLD_READ WORLD_EXECUTE)

install(DIRECTORY src/lua/ DESTINATION lua
  FILES_MATCHING
  PATTERN "*.lua" PERMISSIONS OWNER_WRITE WORLD_READ
  )


set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_GENERATOR "TGZ")

include(CPack)
